--- a/e_invitation_card.html
+++ b/e_invitation_card.html
@@ -16,8 +16,7 @@
 		<meta http-equiv="Expires" content="-1">
 		<meta http-equiv="pragram" content="no-cache">
 		<title>我们结婚吧-叶潮郑 &amp; 胡玉梅</title>
-		<script type="text/javascript" src="./e_invitation_card_files/jquery.min.js"></script>
-		<script src="./e_invitation_card_files/jquery.lazyload.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="./e_invitation_card_files/all.js"></script>
 		<script type="text/javascript">
 			{
 				var system = {
@@ -548,6 +547,5 @@
 		<section class="u-pageLoading">
 			<img src="./e_invitation_card_files/load.gif" alt="loading">
 		</section>
-		<script type="text/javascript" src="./e_invitation_card_files/init.min.js"></script>
 	</body>
 </html>
