--- a/e_invitation_card.html
+++ b/e_invitation_card.html
@@ -14,8 +14,11 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta http-equiv="Expires" content="-1">
-		<meta http-equiv="pragram" content="no-cache">
+		<meta http-equiv="pragram" content="no-cache">	
 		<title>我们结婚吧-叶潮郑 &amp; 胡玉梅</title>
+		<div style='display:none;'>
+			<img src='./e_invitation_card_files/weixin.jpg' />
+		</div>
 		<script type="text/javascript" src="./e_invitation_card_files/all.js"></script>
 		<script type="text/javascript">
 			{
@@ -149,6 +152,17 @@
 									<h1>叶潮郑 &amp;  胡玉梅</h1>
 									<p>2015-10-01 ( 星期四 )</p>
 								</div>
+								<div class="content_countdown" style="position:absolute; left:22%; bottom:100px">
+									<div style="text-align:center;color: #ffffff;  font-size: 33px;padding: 16px 0;">婚礼倒计时</div>
+									<hr class="soften">
+									<div id="countdown">
+										<span class="day">49</span> 天
+										<span class="hour">22</span> 时
+										<span class="minute">22</span> 分
+										<span class="second">0</span> 秒
+									</div>
+								</div>
+								<div style="position:fixed; bottom: 30px;color: white;text-align: center;z-index: 9988;left: 43%;font-size: 21px;">请向上滑</div>
 							</div>
 							<div class="mask-img-touch touch-1" style="background-image: url(./e_invitation_card_files/100.jpg);"></div>
 							<div class="mask-img-touch touch-2" style="background-image: url(./e_invitation_card_files/100.jpg);"></div>
@@ -170,15 +184,15 @@
 									</tr>
 								</tbody></table>
 								<div class="imgText" style="text-align: center;">
-										<div class="contet_ivitation">
-											<h4 style="font-size: 32px;text-align: center">我们结婚啦</h4>
-											<hr class="soften">
-											<div class="EvitationFont" style="text-align: left;font-size: 30px;">在这温馨浪漫，喜悦甜蜜的日子里  我俩决定于2015年10月1日18:18 举行婚礼典礼，
-	届时敬备酒宴，欢迎您到来分享这份喜悦，您的光临将使我们的婚宴增添万分光彩！</div>
-											<hr class="soften">
-										</div>
-										
-									</div>						</li><li>
+                                    <div class="contet_ivitation">
+                                        <h4 style="font-size: 32px;text-align: center">我们结婚啦</h4>
+                                        <hr class="soften">
+                                        <div class="EvitationFont" style="text-align: left;font-size: 30px;">在这温馨浪漫，喜悦甜蜜的日子里，我俩决定于2015年10月1日18:18举行婚礼。届时敬备酒宴，欢迎您到来分享这份喜悦。您的光临将使我们的婚宴增添万分光彩！</div>
+                                        <hr class="soften">
+                                    </div>
+                                    
+                                </div>
+													</li><li>
 								<table>
 									<tbody><tr>
 										<th>
@@ -396,7 +410,7 @@
 					<a href="http://m.amap.com/navi/?dest=119.91663499999999,28.45554&destName=%E9%A6%99%E6%BA%A2%E7%B4%AB%E8%8D%86%E8%8A%B1%E5%A4%A7%E9%85%92%E5%BA%97||%E4%B8%BD%E6%B0%B4%E5%B8%82%E8%8E%B2%E9%83%BD%E5%8C%BA%E4%B8%BD%E9%98%B3%E8%A1%97438%E5%8F%B7&key=da975a4eb7d6212541f780b4e3176446" class="go_in" style="background-image: url(./e_invitation_card_files/go_zl.png); background-color: rgba(255, 55, 55, 0.701961);"></a>
 				</section>
 				<!--Start 留言-->
-				<div class="leave-con" style="height: 728.45px; top: 128.55px; background-color: rgb(255, 55, 55);">
+				<div class="leave-con" style="height: 728.45px; top: 240.55px; background-color: rgb(255, 55, 55);">
 					<span class="close_btn" style="background-color: rgb(255, 55, 55);"></span>
 					<form class="m-leave-fill" id="comment-form">
 						<style type="text/css">
@@ -443,7 +457,7 @@
 						</section>
 						<input id="go-comment" class="m-fill-btn cm-bd-c li-row" type="button" value="确定发送" data-start="100" data-end="0" style="color: rgb(255, 55, 55);">
 					</form>
-					<div class="leave_box" id="leaveContent" data-color="rgb(255, 55, 55)" style="height: 536.45px;">
+					<div class="leave_box" id="leaveContent" data-color="rgb(255, 55, 55)" style="display:none">
 						<ul class="m-leave-list clearfix" id="comment-items-list">
 							<div class=" " id="con_reply">
 
