--- a/e_invitation_card.html
+++ b/e_invitation_card.html
@@ -152,7 +152,7 @@
 									<h1>叶潮郑 &amp;  胡玉梅</h1>
 									<p>2015-10-01 ( 星期四 )</p>
 								</div>
-								<div class="content_countdown" style="position:absolute; left:22%; bottom:100px">
+								<div class="my_tit_cir content_countdown" style="overflow: hidden;position: absolute;left:22%; bottom:100px">
 									<div style="text-align:center;color: #ffffff;  font-size: 33px;padding: 16px 0;">婚礼倒计时</div>
 									<hr class="soften">
 									<div id="countdown">
@@ -162,7 +162,7 @@
 										<span class="second">0</span> 秒
 									</div>
 								</div>
-								<div style="position:fixed; bottom: 30px;color: white;text-align: center;z-index: 9988;left: 43%;font-size: 21px;">请向上滑</div>
+								<div class="my_tit_cir" style="overflow: hidden;position: absolute;bottom: 30px;color: white;text-align: center;left: 43%;font-size: 21px;">请向上滑</div>
 							</div>
 							<div class="mask-img-touch touch-1" style="background-image: url(./e_invitation_card_files/100.jpg);"></div>
 							<div class="mask-img-touch touch-2" style="background-image: url(./e_invitation_card_files/100.jpg);"></div>
@@ -190,8 +190,8 @@
                                         <div class="EvitationFont" style="text-align: left;font-size: 30px;">在这温馨浪漫，喜悦甜蜜的日子里，我俩决定于2015年10月1日18:18举行婚礼。届时敬备酒宴，欢迎您到来分享这份喜悦。您的光临将使我们的婚宴增添万分光彩！</div>
                                         <hr class="soften">
                                     </div>
-                                    
                                 </div>
+								<div style="position:fixed; top: 100px;color: white;text-align: center;z-index: 9988;left: 35%;font-size: 25px;">左右滑动查看更多</div>
 													</li><li>
 								<table>
 									<tbody><tr>
@@ -514,41 +514,7 @@
 						jq(function(){
 							   setInterval('djs()', 1000);
 							jq("#go-comment").click(function(){
-							if(!(jq("#Comment_name").val()&&jq("#Arrive_num").val()&&jq("#Comment_relation").val()&&jq("#Arrive_mobile").val()&& jq("#Comment_wish").val()))
-								{
-									alert('请填写完整再提交');
-									return;
-								}
-								 $.getJSON('/mob/index/comment', {            
-
-									 p1 : jq("#Comment_name").val(),
-									 p2: jq("#Arrive_num").val(),
-									 p3 : jq("#Comment_relation").val() ,
-									 p4 : jq("#Arrive_mobile").val() ,
-									 p5: jq("#Comment_wish").val() ,
-									 id :"237",
-									 callback : '?'
-
-								 },function(data){
-									 if(data.status==1){                             
-										 str = '<li class="m-leave-item clearfix"><p class="name">'+
-												data.p1+' <em class="relation">('+data.p3+')</em></p>'+
-												'<p class="lea-time">'+data.p5+'<em class="timer">刚刚</em></p></li>';
-												jq('#con_reply').prepend(str);
-												jq("#Comment_name").val('');
-												jq("#Arrive_num").val('');
-											   jq("#Comment_relation").val('') ;
-											   jq("#Arrive_mobile").val('') ;
-											   jq("#Comment_wish").val('') ;
-											   alert("发布成功!");
-									 }else{
-
-										 alert(data.info);
-
-									 }
-
-								});          
-
+								alert('此功能未开启，抱歉哈!');       
 							})
 
 						})   
